manifests/istio-canary-0.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: stg
  name: spinnaker-demo-virtual-service
spec:
  hosts:
  - "*"
  gateways:
  - spinnaker-demo-gateway
  http:
  - route:
    - destination:
        host: spinnaker-demo.stg.svc.cluster.local
        subset: v1
