manifests/istio-p100.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: spinnaker-demo-virtual-service
spec:
  hosts:
  - "*"
  gateways:
  - spinnaker-demo-gateway
  http:
  - route:
    - destination:
        host: spinnaker-demo.prod.svc.cluster.local
        subset: v1
